--- a/pic_BluePen.ipynb
+++ b/pic_BluePen.ipynb
@@ -442,13 +442,7 @@
       "2187/2187 [==============================] - 29s 13ms/step - loss: 0.8749 - accuracy: 0.7755\n",
       "Epoch 75/100\n",
       "2187/2187 [==============================] - 29s 13ms/step - loss: 0.8643 - accuracy: 0.7788\n",
-      "Epoch 76/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 76/100\n",
       "2187/2187 [==============================] - 29s 13ms/step - loss: 0.8716 - accuracy: 0.7769\n",
       "Epoch 77/100\n",
       "2187/2187 [==============================] - 29s 13ms/step - loss: 0.8743 - accuracy: 0.7774\n",
@@ -554,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
